crates/goby-cli/tests/fixtures/parse_error_expected.txt
crates/goby-cli/tests/fixtures/parse_error_input.gb:1:3: parse error: unexpected indentation at top level
    bad_indented : Int
    ^
